Fix jumping room info modal tab on hover

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,16 +1,11 @@
 .navbar{
   min-height: 50px;
 }
-//.nav > li > a{
-//  color: var(--sidebar-text-color);
-//  font-size: 14px;
-//  &:hover{
-//    background-color: var(--main-bg-color-hover);
-//    color: var(--sidebar-text-color);
-//  }
-//}
 
 .nav-link{
+  border-top: none!important;
+  border-left: none!important;
+  border-right: none!important;
   &:focus{
     color: inherit;
   }
